--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "scripts": {
     "test": "standard"
   },
+  "bin": {
+    "recursive-watch": "./bin.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/mafintosh/recursive-watch.git"
