--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.1.1",
   "description": "Minimal recursive file watcher",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "ttl": "^1.3.0"
+  },
   "devDependencies": {
     "standard": "^8.6.0"
   },
