--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Minimal recursive file watcher",
   "main": "index.js",
   "dependencies": {
-    "ttl": "^1.3.0"
+    "safety-catch": "^1.0.2",
+    "ttl": "^1.3.0",
+    "xache": "^1.1.0"
   },
   "devDependencies": {
-    "standard": "^8.6.0"
+    "standard": "^17.0.0"
   },
   "scripts": {
     "test": "standard"
